--- a/application.yaml
+++ b/application.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: HEAD
     path: dev
   destination:
-    server: http://kubernetes.default.svc
+    server: https://kubernetes.default.svc
     namespace: myapp
 
   syncPolicy:
